# AdminLineageAI

./: .env.example  .gitignore  LICENSE  README.md  create_tehsil_key.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  output_schema.json  usage.md
examples/: adminlineage_gemini_3_1_flash_lite.ipynb  adminlineage_gemini_nest_example.ipynb
examples/config/: example.yml
examples/data/: aliases.csv  from_units.csv  sagy_ground_truth.csv  to_units.csv
examples/loaders/: sample_loader.py
examples/notebooks/: adminlineage_local_test.ipynb
scripts/: execute_notebook_with_guardrails.py
src/adminlineage/: __init__.py  __main__.py  api.py  candidates.py  cli.py  clients.py  config.py  evals.py  export.py  gemini_client.py  gemini_transport.py  io.py  llm_cache.py  llm_retry.py  llm_types.py  logging_utils.py  mock_client.py  models.py  normalize.py  pipeline.py  pipeline_adjudication.py  pipeline_materialization.py  pipeline_second_stage.py  pipeline_stages.py  prompts.py  replay.py  review.py  schema.py  utils.py  validation.py
src/adminlineage/llm/: __init__.py  base.py  cache.py  gemini.py  mock.py  retry.py
tests/: conftest.py
tests/integration/: test_cli_run_preview_validate_export.py  test_pipeline_batch_fallback.py  test_pipeline_mock_llm.py  test_pipeline_prompt_behavior.py  test_pipeline_replay.py  test_pipeline_second_stage.py  test_resume_behavior.py
tests/unit/: test_api.py  test_candidates.py  test_config.py  test_evals.py  test_gemini_env.py  test_gemini_transport.py  test_io_loader.py  test_llm_cache.py  test_llm_retry.py  test_normalize.py  test_notebook_defaults.py  test_notebook_guardrails.py  test_replay.py  test_review.py  test_schema_validation.py  test_validate_inputs.py
