[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adminlineage"
version = "0.2.0"
description = "Build administrative evolution keys across time with exact-match constrained Gemini adjudication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AdminLineage Contributors" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "google-genai>=0.7",
]

[project.urls]
Homepage = "https://github.com/TahaIbrahimSiddiqui/AdminLineageAI"
Repository = "https://github.com/TahaIbrahimSiddiqui/AdminLineageAI"
Issues = "https://github.com/TahaIbrahimSiddiqui/AdminLineageAI/issues"

[project.optional-dependencies]
io = ["pyarrow>=15.0"]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
  "vulture>=2.16",
]

[project.scripts]
adminlineage = "adminlineage.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.vulture]
ignore_decorators = ["@field_validator", "@model_validator"]
ignore_names = ["LLMBatchResponseNoReason", "backend", "load_data", "message", "model_config", "source_path"]
